# cppystruct

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: cppystruct.h
include/cppystruct/: calcsize.h  data_view.h  endianess.h  format.h  pack.h  string.h  unpack.h
test/: calcsize_test.cpp  format_test.cpp  pack_test.cpp
tests/: CMakeLists.txt  binary_compatibility_test.cpp  calcsize_test.cpp  constexpr_compare.h  constexpr_require.h  format_test.cpp  main.cpp  pack_test.cpp  string_test.cpp  unpack_test.cpp
